# InfiniTAM

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  appveyor.yml
Apps/InfiniTAM/: CMakeLists.txt  CreateDefaultImageSource.cpp  CreateDefaultImageSource.h  InfiniTAM.cpp  InfiniTAM_bpo.cpp  UIEngine.cpp  UIEngine.h  UIEngine_BPO.cpp  UIEngine_BPO.h  UIEngine_BPO_GlutFunctions.cpp  UIEngine_GlutFunctions.cpp  prettyprint.hpp
Apps/InfiniTAM_cli/: CLIEngine.cpp  CLIEngine.h  CMakeLists.txt  CreateDefaultImageSource.cpp  CreateDefaultImageSource.h  InfiniTAM_cli.cpp
FernRelocLib/: CMakeLists.txt  FernConservatory.cpp  FernConservatory.h  PixelUtils.h  PoseDatabase.cpp  PoseDatabase.h  RelocDatabase.cpp  RelocDatabase.h  Relocaliser.cpp  Relocaliser.h
ITMLib/: Android.mk  CMakeLists.txt  GlobalTemplateDefines.h
ITMLib/CameraTrackers/: CameraTrackerFactory.h
ITMLib/SurfaceTrackers/: SurfaceTrackerFactory.h
ITMLib/Utils/: CLionCUDAsyntax.h  CLionCudaSyntax.h  CPPPrintHelpers.cpp  Configuration.cpp  Configuration.h  ExecutionMode.h  HashBlockProperties.h  ImageTypes.h  Math.cpp  Math.h  MemoryBlock_StdContainer_Convertions.h  MemoryBlock_StdVector_Converter.h  Quaternions.cpp  Quaternions.h  SurfelVolumeParameters.h  VoxelFlags.h  VoxelVolumeParameters.cpp  VoxelVolumeParameters.h  WarpType.h
InputSource/: Android.mk  CMakeLists.txt  CompositeImageSourceEngine.cpp  CompositeImageSourceEngine.h  FFMPEGReader.cpp  FFMPEGReader.h  FFMPEGWriter.cpp  FFMPEGWriter.h  IMUSourceEngine.cpp  IMUSourceEngine.h  ImageSourceEngine.cpp  ImageSourceEngine.h  Kinect2Engine.cpp  Kinect2Engine.h  LibUVCEngine.cpp  LibUVCEngine.h  OpenNI2Engine.cpp  OpenNI2Engine.h  OpenNIEngine.cpp  OpenNIEngine.h  PicoFlexxEngine.cpp  PicoFlexxEngine.h  RealSenseEngine.cpp  RealSenseEngine.h
MiniSlamGraphLib/: CMakeLists.txt  GraphEdge.h  GraphEdgeSE3.cpp  GraphEdgeSE3.h  GraphNode.h  GraphNodeSE3.h  LevenbergMarquardtMethod.cpp  MatrixWrapper.cpp  MatrixWrapper.h  Matrix_CSparse.h  ParameterIndex.h  QuaternionHelpers.cpp  QuaternionHelpers.h  SlamGraph.cpp  SlamGraph.h  SlamGraphErrorFunction.cpp  SlamGraphErrorFunction.h  SparseBlockMatrix.h  SparseRegularBlockMatrix.h  VariableLengthVector.h
ORUtils/: CMakeLists.txt  CUDADefines.h  Cholesky.h  CompileTimeStringConcatenation.h  CrossPlatformMacros.h  DrawText.cpp  DrawText.h  FileUtils.cpp  FileUtils.h  HomkerMap.h  IStreamWrapper.cpp  IStreamWrapper.h  IStreamWrapper2.cpp  IStreamWrapper2.h  Image.h  ImageCombination.cpp  ImageCombination.h  KeyValueConfig.cpp  KeyValueConfig.h  Matrix.h  MemoryBlock.h  MemoryBlockComparison.h  MemoryBlockPersistence.cpp  MemoryBlockPersistence.h  MemoryBlockPersister.h  MemoryDeviceType.h  MetalContext.mm  NVTimer.h  ORUtilsConfig.h.in  OStreamWrapper.cpp  OStreamWrapper.h  OStreamWrapper2.cpp  OStreamWrapper2.h  PlatformIndependedParallelSum.h  PlatformIndependentAtomics.h  SE3Pose.cpp  SE3Pose.h  TypeTraits.cpp  TypeTraits.h  Vector.h  (+2 more)
ORUtils/MathTypePersistence/: MathTypePersistence.h  MathTypePersistence_Internal.h  MathTypePersistence_Matrix3.cpp  MathTypePersistence_Matrix4.cpp  MathTypePersistence_Vector2.cpp  MathTypePersistence_Vector3.cpp  MathTypePersistence_Vector4.cpp  MathTypePersistence_Vector6.cpp
ORUtils/MemoryBlockPersistence/: ImagePersistenceOperators.cpp  MemoryBlockPersistence.cpp  MemoryBlockPersistence.h  MemoryBlockPersistenceOperators.cpp  MemoryBlockPersistenceOperators.h  MemoryBlockPersistenceOperators.tpp
Tests/: CMakeLists.txt  CUDAAtomicTesting.cu  GenerateDerivedTestData.cpp  GenerateDerivedTestData_Config.h.in  SnoopyTestUtilities.cpp  SnoopyTestUtilities.h  TestUtilities.cpp  TestUtilities.cu  TestUtilities.h  TestUtilities.tpp  TestUtils.cpp  TestUtils.cu  TestUtils.h  TestUtils.tpp  TestUtilsForSnoopyFrames16And17.cpp  TestUtilsForSnoopyFrames16And17.h  TestUtils_Functors.h  TestUtils_Kernels.h  Test_CUDASpatialHashReduction.cpp  Test_CUDA_Atomics.cpp  Test_Configuration.cpp  Test_ConstructVolumeFromImage_CPU.cpp  Test_ConstructVolumeFromImage_CPU_to_CUDA.cpp  Test_ConstructVolumeFromImage_CUDA.cpp  Test_DepthFusion.cpp  Test_DepthFusion_CPU.cpp  Test_DepthFusion_CPU_vs_CUDA.cpp  Test_DepthFusion_CUDA.cpp  Test_EnumSerialization.cpp  Test_ExpandAllocation.cpp  Test_FFmpegReadWrite.cpp  Test_FuseLifeIntoCanonical.cpp  Test_HashAllocation.cpp  Test_HashAllocationThreadSafety.cpp  Test_ImageMaskReader.cpp  Test_ImageProcessingEngine.cpp  Test_LevelSetAlignmentAuxiliaryFunctions.cpp  Test_LevelSetAlignment_CPU_vs_CUDA.cpp  Test_LevelSetAlignment_CPU_vs_CUDA_Aux.h  Test_LevelSetAlignment_PVA_vs_VBH.cpp  (+34 more)
Tests/TestData/: config1.json  default_config_cpu.json  default_config_cuda.json
Tests/TestDataGeneration/: ConstructSnoopyVolumes.cpp  ConstructTeddyVolumes.cpp  ConstructTeddyVolumes.h  GenerateImageProcessingTestData.cpp  GenerateImageProcessingTestData.h  GenerateLevelSetAlignmentDeviceComparisonData.cpp  GenerateLevelSetAlignmentDeviceComparisonData.h  GenerateLevelSetAlignmentIndexComparisonTestData.cpp  GenerateLevelSetAlignmentIndexComparisonTestData.h  GenerateRaycastingTestData.cpp  GenerateRaycastingTestData.cu  GenerateRaycastingTestData.h  GenerateRaycastingTestData.tpp  GenerateRigidAlignmentTestData.cpp  GenerateRigidAlignmentTestData.cu  GenerateRigidAlignmentTestData.h  GenerateRigidAlignmentTestData.tpp  GenerateSnoopyMeshes.cpp  GenerateSnoopyMeshes.cu  GenerateSnoopyMeshes.h  GenerateSnoopyMeshes.tpp  GenerateSnoopyVolumes.cpp  GenerateSnoopyVolumes.h  GenerateTestConfigurations.cpp  GenerateTestConfigurations.h  GenerateVolumeFusionConsistencyData.cpp  GenerateVolumeFusionConsistencyData.h  GenerateVolumeFusionConsistencyData.tpp  GenerateVolumeWarpingConsistencyData.cpp  GenerateVolumeWarpingConsistencyData.h  GenerateVolumeWarpingConsistencyData.tpp
Tests/TestUtilities/: CLI_optionsSubtest.cpp  CameraPoseAndRayTracingEngineFixture.h  CameraPoseAndRaycastingEngineFixture.h  CameraPoseAndRenderingEngineFixture.h  GenericTestModuleHeader.h  LevelSetAlignmentTestUtilities.tpp  RigidTrackerPresets.cpp  RigidTrackerPresets.h  SnoopyTestUtilities.cpp  (+13 more)
(+983 files in other folders)
